Satellites of planets pages, homepage, Mars interactive map

--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -55,128 +55,141 @@ link: dwarf-planet
                     All three methods show a clear division between planets and dwarf planets.
                 </p>
                 <p class="paragraph">
-                    The roundness of a dwarf planet is harder to define.
+                    The roundness of a minor planet is harder to prove.
                     Of the five official dwarf planets, only Ceres and Pluto were visited by spacecrafts.
+                    The largest asteroids have been observed from <a href="earth.html">Earth</a> and none (apart from Ceres) are round.
+                    <a href="vesta.html">Vesta</a> has been in hydrostatic equilibrium and has differentiated interior, but lost its round form after a collision event.
+                    Pallas and Hygiea are also close to round shapes. 
+                    This rules out any other dwarf planets in the asteroid belt.
+                </p>
+                <p class="paragraph">
+                    The trans-Neptunian objects are much further from Earth and their shapes can't be determined with telescopes, so many assumptions are made.
+                    The smallest known rounded body, <a href="mimas.html">Mimas</a> has a diameter of roughly 400 km, which could suggest that all of the TNOs greater than that number could be round.
+                    However, the largest non-round moon, <a href="proteus.html">Proteus</a>, and the second largest asteroid, Vesta, have mean diameters of 420 and 525 respectively.
+                    Furthermore, it is possible for TNOs much larger than Vesta to not have been rounded.
+                    Some objects like Gonggong, Quaoar and Sedna likely have differentiated interiors, while many smaller, darker bodies have low density and might have porous, undifferentiated interiors.
+                </p>
+                <p class="paragraph">
                     Mike Brown classifies numerous <a href="tno.html">TNOs</a> in different categories of certainty to be round, based on size.
-                    According to him, ten TNOs are "nearly certainly" dwarf planets - Eris, Pluto, Makemake, Gonggong, Haumea, Quaoar, Sedna, Orcus, 2002MS4 and Salacia.
+                    According to him, ten TNOs are "nearly certainly" dwarf planets - Eris, Pluto, Makemake, Gonggong, Haumea, Quaoar, Sedna, Orcus, Máni and Salacia.
                     The list has not been expanded since 2018 and old entries in the list have not been updated.
                 </p>
                 <div class="wrapper">
                     <p>List of biggest minor planets (as of 19 June 2025, Robert Johnston)</p>
                     <table>
                         <tr class="firstrow">
-                            <th>Name</th><th>Diameter (km)</th><th>Brown's category</th><th>Is a dwarf planet according to IAU</th><th>Direct observation</th><th>Category</th>
+                            <th>Name</th><th>Diameter (km)</th><th>Brown's category</th><th>Category</th>
                         </tr>
                         <tr>
-                            <th><a href="pluto.html">Pluto</a></th><th>2,375</th><th>(already proven round)</th><th>yes</th><th>round</th><th>plutino</th>
+                            <th><a href="pluto.html">Pluto</a></th><th>2,375</th><th>(already proven round)</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th><a href="eris.html">Eris</a></th><th>2326</th><th>Nearly certainly</th><th>yes</th><th> - </th><th>SDO</th>
+                            <th><a href="eris.html">Eris</a></th><th>2326</th><th>Nearly certainly</th><th>SDO</th>
                         </tr>
                         <tr>
-                            <th><a href="haumea.html">Haumea</a></th><th>1595</th><th>Nearly certainly</th><th>yes</th><th> - </th><th>classical or 12:7 resonant</th>
+                            <th><a href="haumea.html">Haumea</a></th><th>1595</th><th>Nearly certainly</th><th>classical or 12:7 resonant</th>
                         </tr>
                         <tr>
-                            <th><a href="gonggong.html">Gonggong</a></th><th>1535</th><th>Nearly certainly</th><th>no</th><th> - </th><th> 3:10 resonant SDO</th>
+                            <th><a href="gonggong.html">Gonggong</a></th><th>1535</th><th>Nearly certainly</th><th> 3:10 resonant SDO</th>
                         </tr>
                         <tr>
-                            <th><a href="makemake.html">Makemake</a></th><th>1430</th><th>Nearly certainly</th><th>yes</th><th> - </th><th>classical</th>
+                            <th><a href="makemake.html">Makemake</a></th><th>1430</th><th>Nearly certainly</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>2014 EZ51</th><th>1260</th><th>Highly likely</th><th>no</th><th> - </th><th>plutino</th>
+                            <th>2014 EZ51</th><th>1260</th><th>Highly likely</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th><a href="quaoar.html">Quaoar</a></th><th>1111</th><th>Nearly certainly</th><th>no</th><th> - </th><th>classical</th>
+                            <th><a href="quaoar.html">Quaoar</a></th><th>1111</th><th>Nearly certainly</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th><a href="sedna.html">Sedna</a></th><th>995</th><th>Nearly certainly</th><th>no</th><th> - </th><th>sednoid</th>
+                            <th><a href="sedna.html">Sedna</a></th><th>995</th><th>Nearly certainly</th><th>sednoid</th>
                         </tr>
                         <tr>
-                            <th><a href="ceres.html">Ceres</a></th><th>939</th><th>(already proven round)</th><th>yes</th><th>round</th><th><a href="asteroid-belt.html">main belt</a> asteroid</th>
+                            <th><a href="ceres.html">Ceres</a></th><th>939</th><th>(already proven round)</th><th><a href="asteroid-belt.html">main belt</a> asteroid</th>
                         </tr>
                         <tr>
-                            <th><a href="orcus.html">Orcus</a></th><th>910</th><th>Nearly certainly</th><th>no</th><th> - </th><th>plutino</th>
+                            <th><a href="orcus.html">Orcus</a></th><th>910</th><th>Nearly certainly</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th>Salacia</th><th>866</th><th>Nearly certainly</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Salacia</th><th>866</th><th>Nearly certainly</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>Máni</th><th>796</th><th>Nearly certainly</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Máni</th><th>796</th><th>Nearly certainly</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>2018 AG37</th><th>790</th><th> - </th><th>no</th><th> - </th><th><a href="centaur.html">centaur</a> and <a href="tno.html">TNO</a></th>
+                            <th>2018 AG37</th><th>790</th><th> - </th><th><a href="centaur.html">centaur</a> and <a href="tno.html">TNO</a></th>
                         </tr>
                         <tr>
-                            <th>Aya</th><th>768</th><th>Highly likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Aya</th><th>768</th><th>Highly likely</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>2010 KZ39</th><th>743</th><th>Likely</th><th>no</th><th> - </th><th>detached</th>
+                            <th>2010 KZ39</th><th>743</th><th>Likely</th><th>detached</th>
                         </tr>
                         <tr>
-                            <th>Chiminigagua</th><th>742</th><th>Highly likely</th><th>no</th><th> - </th><th>SDO</th>
+                            <th>Chiminigagua</th><th>742</th><th>Highly likely</th><th>SDO</th>
                         </tr>
                         <tr>
-                            <th>Varda</th><th>740</th><th>Highly likely</th><th>no</th><th> - </th><th>4:7 resonant</th>
+                            <th>Varda</th><th>740</th><th>Highly likely</th><th>4:7 resonant</th>
                         </tr>
                         <tr>
-                            <th>2017 OF201</th><th>736</th><th> - </th><th>no</th><th> - </th><th>EDDO</th>
+                            <th>2017 OF201</th><th>736</th><th> - </th><th>EDDO</th>
                         </tr>
                         <tr>
-                            <th>Achlys</th><th>723</th><th>Highly likely</th><th>no</th><th> - </th><th>plutino</th>
+                            <th>Achlys</th><th>723</th><th>Highly likely</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th>2021 DR15</th><th>716</th><th> - </th><th>no</th><th> - </th><th>SDO</th>
+                            <th>2021 DR15</th><th>716</th><th> - </th><th>SDO</th>
                         </tr>
                         <tr>
-                            <th>Ixion</th><th>710</th><th>Highly likely</th><th>no</th><th> - </th><th>plutino</th>
+                            <th>Ixion</th><th>710</th><th>Highly likely</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th>1995 SM55</th><th>701</th><th>Probably not</th><th>no</th><th> - </th><th>Haumea family</th>
+                            <th>1995 SM55</th><th>701</th><th>Probably not</th><th>Haumea family</th>
                         </tr>
                         <tr>
-                            <th>2004 GV9</th><th>680</th><th>Highly likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Goibniu</th><th>680</th><th>Highly likely</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>Ritona</th><th>679</th><th>Highly likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Ritona</th><th>679</th><th>Highly likely</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>Varuna</th><th>668</th><th>Highly likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Varuna</th><th>668</th><th>Highly likely</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>2002 UX25</th><th>664</th><th>Highly likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Uni</th><th>664</th><th>Highly likely</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>2017 OF69</th><th>662</th><th>Likely</th><th>no</th><th> - </th><th>plutino</th>
+                            <th>2017 OF69</th><th>662</th><th>Likely</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th>2010 RF43</th><th>650</th><th>Highly likely</th><th>no</th><th> - </th><th>SDO</th>
+                            <th>2010 RF43</th><th>650</th><th>Highly likely</th><th>SDO</th>
                         </tr>
                         <tr>
-                            <th>2003 UZ413</th><th>650</th><th>Likely</th><th>no</th><th> - </th><th>plutino</th>
+                            <th>2003 UZ413</th><th>650</th><th>Likely</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th>2010 JO179</th><th>644</th><th>Likely</th><th>no</th><th> - </th><th>SDO</th>
+                            <th>2010 JO179</th><th>644</th><th>Likely</th><th>SDO</th>
                         </tr>
                         <tr>
-                            <th>2014 UZ224</th><th>635</th><th>Likely</th><th>no</th><th> - </th><th>SDO</th>
+                            <th>2014 UZ224</th><th>635</th><th>Likely</th><th>SDO</th>
                         </tr>
                         <tr>
-                            <th>2001 KA77</th><th>634</th><th>Possibly</th><th>no</th><th> - </th><th>classical</th>
+                            <th>2001 KA77</th><th>634</th><th>Possibly</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>2014 WP509</th><th>618</th><th>Likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>2014 WP509</th><th>618</th><th>Likely</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>Gǃkúnǁʼhòmdímà</th><th>614</th><th>Highly likely</th><th>no</th><th> - </th><th>SDO</th>
+                            <th>Gǃkúnǁʼhòmdímà</th><th>614</th><th>Highly likely</th><th>SDO</th>
                         </tr>
                         <tr>
-                            <th>2018 VG18</th><th>610</th><th>Highly likely</th><th>no</th><th> - </th><th>2:9 resonant</th>
+                            <th>2018 VG18</th><th>610</th><th>Highly likely</th><th>2:9 resonant</th>
                         </tr>
                         <tr>
-                            <th>2013 XC26</th><th>604</th><th>Likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>2013 XC26</th><th>604</th><th>Likely</th><th>classical</th>
                         </tr>
                         <tr>
-                            <th>Chaos</th><th>600</th><th>Highly likely</th><th>no</th><th> - </th><th>classical</th>
+                            <th>Chaos</th><th>600</th><th>Highly likely</th><th>classical</th>
                         </tr>
                     </table>
                 </div>
@@ -301,15 +314,18 @@ link: dwarf-planet
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
-                        <a href="https://en.wikipedia.org/wiki/Dwarf_planet">https://en.wikipedia.org/wiki/Dwarf_planet</a>
-                    </li>
-                    <li>
-                        <a href="https://en.wikipedia.org/wiki/List_of_possible_dwarf_planets">https://en.wikipedia.org/wiki/List_of_possible_dwarf_planets</a>
+                        <a href="https://www.sciencedirect.com/science/article/pii/S0019103524000769?via%3Dihub">https://www.sciencedirect.com/science/article/pii/S0019103524000769?via%3Dihub</a>
                     </li>
                     <li>
                         <a href="https://web.gps.caltech.edu/~mbrown/dps.html">https://web.gps.caltech.edu/~mbrown/dps.html</a>
                     </li>
                     <li>
                         <a href="https://johnstonsarchive.net/astro/tnoslist.html">https://johnstonsarchive.net/astro/tnoslist.html</a>
+                    </li>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/Dwarf_planet">https://en.wikipedia.org/wiki/Dwarf_planet</a>
+                    </li>
+                    <li>
+                        <a href="https://en.wikipedia.org/wiki/List_of_possible_dwarf_planets">https://en.wikipedia.org/wiki/List_of_possible_dwarf_planets</a>
                     </li>
                 </ul>
