--- a/pages/earth.html
+++ b/pages/earth.html
@@ -210,7 +210,7 @@ link: earth
                     </p>
                     <p class="paragraph">
                         It is also the only natural astronomic body other than Earth that has been visited by people during NASA's Apollo mission. 
-                        The Artemis mission is a follow-up to Apollo, with the uncrewed Artemis 1 already ongoing.
+                        The Artemis mission is a follow-up to Apollo, with the uncrewed Artemis 1 already successful.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
