--- a/pages/mars.html
+++ b/pages/mars.html
@@ -13,17 +13,17 @@ link: mars
                     <p class="paragraph">
                         Mars is the fourth <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> and the second smallest in the <a href="solar-system.html">Solar System</a>.   
                         Mars is named after the Roman god of war. 
-                        It is also known as the Red Planet, the name originating from it's red surface.
+                        It is also known as the Red Planet, the name originating from its red surface.
                         The planet has a similar composition to that of <a href="earth.html">Earth</a>, but with a thinner atmosphere.
                     </p>
                     <p class="paragraph">
                         Mars features some of the largest geological structures in the Solar System like the highest known mountain - Olympus Mons (21,229 m) and the largest canyon Valles Marineris. 
                         Craters are mostly concentrated in the south, where the surface is older, the biggest of which is Utopia, although the unconfirmed North Polar Basin is bigger. 
                         There is ice on Mars, most of which is at the poles, with evidences showing that liquid water might have existed at one point on the Martian surface.
-                        Currently no liquid water can remain on the surface, due to the low athmospheric pressure. 
+                        Currently no liquid water can remain on the surface, due to the low atmospheric pressure. 
                     </p>
                     <p class="paragraph">
-                        There are two <a href="natural-satellite.html">satellites</a> orbiting around Mars - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>.
+                        There are <a href="satellites-of-mars.html">two satellites orbiting around Mars</a> - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>.
                     </p>
                     <p class="paragraph">
                         Mars has been visited by multiple spacecraft, the first success being NASA's Mariner 4.
@@ -54,7 +54,7 @@ link: mars
                 <h2 class="paragraphheader" id="NaturalHistory">Natural history</h2>
                 <p class="paragraph">
                     Mars, like the other planets in our solar system, formed approximately 4.6 billion years ago from the solar nebula - a rotating disk of gas and dust surrounding the Sun.
-                    As material in this disk collided and consolidated, Mars gradually accreted into a planet, developing it's differentiated internal structure.
+                    As material in this disk collided and consolidated, Mars gradually accreted into a planet, developing its differentiated internal structure.
                     During its early history, known as the Noachian Period (about 4.1 to 3.7 billion years ago), Mars was a much warmer and wetter world, with a thicker atmosphere that allowed liquid water to flow across its surface, carving out river valleys, lake beds, and possibly even a vast ocean in the northern lowlands.
                     This era also saw intense volcanic activity, which shaped massive features like the Tharsis region.
                     The oldest surviving surfaces from that period are heavily cratered.
@@ -67,7 +67,7 @@ link: mars
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
                 <p class="paragraph">
-                    Mars is approximately half <a href="earth.html">Earth's</a> diameter and is 15% it's volume.
+                    Mars is approximately half <a href="earth.html">Earth's</a> diameter and is 15% its volume.
                     The surface gravity on Mars is approximately 1/3 of that on Earth.
                 </p>
                 <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
@@ -75,7 +75,7 @@ link: mars
                     Mars has an interior similar to that of Earth. 
                     It is differentiated into a crust, a rocky mantle and a metallic core.
                     The crust contains mostly silicates, with common elements being (apart from silicon and oxygen) iron, magnesium and aluminium.
-                    The iron(III) oxide (ferric oxide) gives Mars it's red color.
+                    The iron(III) oxide (ferric oxide) gives Mars its red color.
                     The Martian mantle is solid and rocky, but is not divided like Earth's inner and outer mantle.
                     The core contains iron, nickel and sulfur.
                 </p>
@@ -108,7 +108,10 @@ link: mars
                     <p class="paragraph">
                         Valles Marineris, named after Mariner 9, is a canyon east from Tharsis.
                         It is long 4,000 km, wide 200 km and deep 7 km, making it the biggest known canyon in the Solar System.
-                        Many theories exist on what might have caused it's formation, like a tectonic rift, or formed by erosion by liquid water.
+                        It stretches from Noctis Labyrinthus to the west and is comprised of several chasmata - Tithonium, Ius, Melas, Candor, Ophir, Coprates, Ganges, Capri and Eos.
+                        It ends in an outflow channel in the Xanthe and Margaritifer Terrae, before emptying into the Chryse Planitia.
+                        There are other nearby chasmata like Echus Chasma, which empties out through the Kasei Valles, and Hebes Chasmata, which is isolated from Echus.
+                        Many theories exist on what might have caused these formations, like a tectonic rift, or erosion by liquid water.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -133,17 +136,41 @@ link: mars
                     <div class="captionbox center" style="width:1026px;">
                         <img class="articleimage" src="../assets/images/maps/mars-topography-map.jpg" alt="Topography map of Mars" width="1024" height="585.6" usemap="#marstop">
                         <p class="caption">Clickable topographic map of Mars - Mars Global Surveyor</p>
-                        
                         <map name="marstop">
-                            <area shape="rect" coords="134,146,240,343" alt="Tharsis" href="https://en.wikipedia.org/wiki/Tharsis">
-                            <area shape="rect" coords="241,298,404,353" alt="Valles Marineris" href="https://en.wikipedia.org/wiki/Valles_Marineris">
-                 
+                            <area shape="rect" coords="351,406,439,507" alt="Argyre Planitia" href="https://en.wikipedia.org/wiki/Argyre_Planitia">
+                            <area shape="rect" coords="717,237,780,295" alt="Isidis Planitia" href="https://en.wikipedia.org/wiki/Isidis_Planitia">
+                            <area shape="rect" coords="296,213,377,246" alt="Kasei_Valles" href="https://en.wikipedia.org/wiki/Kasei_Valles">
+                            <area shape="rect" coords="241,305,404,353" alt="Valles Marineris" href="https://en.wikipedia.org/wiki/Valles_Marineris">
+                            <area shape="rect" coords="265,146,365,236" alt="Tempe Terra" href="https://en.wikipedia.org/wiki/Tempe_Terra">
+                            <area shape="rect" coords="351,247,404,320" alt="Xanthe Terra" href="https://en.wikipedia.org/wiki/Xanthe_Terra">
+                            <area shape="rect" coords="296,247,350,304" alt="Lunae Planum" href="https://en.wikipedia.org/wiki/Lunae_Planum">
+                            <area shape="rect" coords="405,247,473,353" alt="Margaritifer Terra" href="https://en.wikipedia.org/wiki/Margaritifer_Terra">
+                            <area shape="rect" coords="661,247,727,310" alt="Syrtis Major Planum" href="https://en.wikipedia.org/wiki/Syrtis_Major_Planum">
+                            <area shape="rect" coords="869,204,934,277" alt="Elysium" href="https://en.wikipedia.org/wiki/Elysium_(volcanic_province)">
+                            <area shape="rect" coords="134,146,295,428" alt="Tharsis" href="https://en.wikipedia.org/wiki/Tharsis">
+                            <area shape="rect" coords="781,329,834,393" alt="Hesperia Planum" href="https://en.wikipedia.org/wiki/Hesperia_Planum">
+                            <area shape="rect" coords="366,146,473,246" alt="Chryse Planitia" href="https://en.wikipedia.org/wiki/Chryse_Planitia">
+                            <area shape="rect" coords="622,375,772,482" alt="Hellas Planitia" href="https://en.wikipedia.org/wiki/Hellas_Planitia">
+                            <area shape="rect" coords="716,291,803,374" alt="Tyrrhena Terra" href="https://en.wikipedia.org/wiki/Tyrrhena_Terra">
+                            <area shape="rect" coords="566,247,715,374" alt="Terra Sabaea" href="https://en.wikipedia.org/wiki/Terra_Sabaea">
+                            <area shape="rect" coords="869,204,998,334" alt="Elysium Planitia" href="https://en.wikipedia.org/wiki/Elysium_Planitia">
+                            <area shape="rect" coords="26,32,242,203" alt="Arcadia Planitia" href="https://en.wikipedia.org/wiki/Arcadia_Planitia">
+                            <area shape="rect" coords="955,32,998,203" alt="Arcadia Planitia" href="https://en.wikipedia.org/wiki/Arcadia_Planitia">
+                            <area shape="rect" coords="26,204,133,314" alt="Amazonis Planitia" href="https://en.wikipedia.org/wiki/Amazonis_Planitia">
+                            <area shape="rect" coords="243,32,632,184" alt="Acidalia Planitia" href="https://en.wikipedia.org/wiki/Acidalia_Planitia">
+                            <area shape="rect" coords="474,147,727,353" alt="Arabia Terra" href="https://en.wikipedia.org/wiki/Arabia_Terra">
+                            <area shape="rect" coords="633,32,954,256" alt="Utopia Planitia" href="https://en.wikipedia.org/wiki/Utopia_Planitia">
+                            <area shape="rect" coords="26,315,209,572" alt="Terra Sirenum" href="https://en.wikipedia.org/wiki/Terra_Sirenum">
+                            <area shape="rect" coords="210,354,404,572" alt="Aonia Terra" href="https://en.wikipedia.org/wiki/Aonia_Terra">
+                            <area shape="rect" coords="405,354,715,572" alt="Noachis Terra" href="https://en.wikipedia.org/wiki/Noachis_Terra">
+                            <area shape="rect" coords="716,375,856,572" alt="Promethei Terra" href="https://en.wikipedia.org/wiki/Promethei_Terra">
+                            <area shape="rect" coords="781,257,998,572" alt="Terra Cimmeria" href="https://en.wikipedia.org/wiki/Terra_Cimmeria">
                         </map>
                     </div>
                 </div>
                 <h3 class="paragraphsubheader" id="Hydrology">Hydrology</h3>
                 <p class="paragraph">
-                    Water on Mars exist as ice and small quantities of vapor.
+                    Water on Mars exists as ice and small quantities of vapor.
                     Liquid water can hardly form on Mars, where the atmospheric pressure is less than that on Earth.
                     The two biggest regions where water exists are the poles.
                     The South pole also has a permanent dry ice (solid carbon dioxide) cap.
@@ -169,7 +196,7 @@ link: mars
                         Mars has two <a href="natural-satellite.html">natural satellites</a> - <a href="phobos.html">Phobos</a> and <a href="deimos.html">Deimos</a>. 
                         They are named after the Greek gods of fear and terror respectively. 
                         Phobos is the bigger of the two and orbits closer to Mars. 
-                        Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
+                        Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">asteroid belt</a>.
                         Both satellites' orbits are near the equator.
                         Of the two, Phobos is the one orbiting closer to Mars.
                     </p>
@@ -205,7 +232,7 @@ link: mars
                 <h3 class="paragraphheader" id="SpaceRace">Space race</h3>
                 <p class="paragraph">
                     The Soviet Union were the first with a program to Mars.
-                    NASA's Mariner 4 completed the first successful flyby, although the soviet Mars 1 lost communication before it's flyby.
+                    NASA's Mariner 4 completed the first successful flyby, although the soviet Mars 1 lost communication before its flyby.
                     It also transmitted back to Earth the first images from another planet and disproving early theories about the Martian surface.
                     Mariner 9 was the first to orbit Mars, two weeks before the soviet Mars 2.
                     Mars 2 was successful at deploying an orbiter, but lander and rover crashed into the martian surface.
@@ -247,7 +274,7 @@ link: mars
                 <p class="paragraph">
                     Future missions include JAXA's Martian Moons eXploration - a Phobos and Deimos sample return mission, NASA's low-cost EscaPADE orbiters, CNSA's Tianwen-3 - a Mars sample return mission, ESA's Rosalind Franklin rover, and ISRO's Mangalayaan-2 orbiter, lander, and rover.
                 </p>
-                <h2 class="paragraphheader" id="HabitabilityAndColonisation">Habitability and colonisation</h2>
+                <h2 class="paragraphheader" id="HabitabilityAndColonisation">Habitability and colonization</h2>
                 <p class="paragraph">
                     Mars does not have life forms, but might have done in the past.
                     Current missions of NASA are studying the surface for signs of life on Mars.
@@ -255,9 +282,9 @@ link: mars
                     The mission was postponed due to worsening relations due to Russia's ongoing invasion of Ukraine.
                 </p>
                 <p class="paragraph">
-                    Plans for colonising Mars were proposed multiple times.
+                    Plans for colonizing Mars were proposed multiple times.
                     NASA and CNSA both plan on sending people on Mars as early as the 2030s.
-                    SpaceX, a privately held company, has proposed it's own missions to Mars with the intent of colonising and settling the planet.
+                    SpaceX, a privately held company, has proposed its own missions to Mars with the intent of colonizing and settling the planet.
                 </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
