--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -101,7 +101,7 @@ link: natural-satellite
                 <p class="paragraph">
                     There are 274 moons known to orbit <a href="saturn.html">Saturn</a>. 
                     The ones discovered earlier were named after Titans and Giants from Greek mythology. 
-                    Subsequent moons were named after other Greek mythological figures, Celtic and Inuit gods and Norse ice giants.
+                    Irregular moons were named after Celtic and Inuit gods and Norse ice giants (except Phoebe).
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right">
@@ -149,7 +149,7 @@ link: natural-satellite
                     <h3 class="paragraphsubheader" id="SatellitesOfUranus">Satellites of Uranus</h3>
                     <p class="readmore">Main article: <a href="satellites-of-uranus.html">Satellites of Uranus</a></p>
                     <p class="paragraph">
-                        29 moons are known to orbit <a href="uranus.html">Uranus</a>, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        29 moons are known to orbit <a href="uranus.html">Uranus</a>, all but two named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
                         The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                     </p>
                     <div class="imgwrapper">
@@ -205,12 +205,13 @@ link: natural-satellite
                     </p>
                 </div>
                 <div class="articlediv">
-                    <h2 class="paragraphheader" id="SatellitesOfAsteroids">Satellites of asteroids</h2>
+                    <h2 class="paragraphheader" id="SatellitesOfSmallSolarSystemBodies">Satellites of small Solar System bodies</h2>
                     <p class="paragraph">
-                        It is possible for asteroids to have satellites. 
+                        It is possible for asteroids and other small Solar System bodies to have satellites. 
                         The first one to be discovered was 243 Ida's satellite Dactyl. 
                         Some asteroids have more than one satellite. 
-                        90 Antiope is a binary system, where the two bodies are of similar sizes.
+                        90 Antiope and 617 Patroclus are binary systems, where the two bodies in each system are of similar sizes.
+                        An interesting case is the triple system of the <a href="tno.html">trans-Neptunian object</a> Lempo, which is a binary with a third smaller body.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
