--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -132,14 +132,14 @@ link: neptune
                     <h2 class="paragraphheader" id="Satellites">Satellites</h2>
                     <p class="readmore">Main article: <a href="satellites-of-neptune.html">Satellites of Neptune</a></p>
                     <p class="paragraph">
-                        There are 16 known <a href="neptune.html">Neptunian</a> satellites, all named after Greek water deities. 
+                        There are <a href="satellites-of-neptune.html">16 known Neptunian satellites</a>, all named after Greek water deities. 
                         The biggest satellite - <a href="triton.html">Triton</a> was discovered just 17 years after the discovery of Neptune. 
                         It is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune, because of it's retrograde orbit. 
                         Triton is similar to other moons like <a href="ganymede.html">Ganymede</a>, <a href="europa.html">Europa</a>, and <a href="enceladus.html">Enceladus</a> in that a subsurface ocean might exist under the surface.
                     </p>
                     <p class="paragraph">
                         All of the other satellites have an irregular shape.
-                        The second discovered moon, Nereid, is an irregular moon with a high 0.7512 eccentricity and a apoapsis seven times the periapsis.
+                        The second discovered moon, Nereid, is an irregular moon with a high 0.7512 eccentricity and an apoapsis seven times the periapsis.
                         More moons were discovered by Voyager 2.
                         The biggest of them is <a href="proteus.html">Proteus</a>, whis is the biggest we know of with an irregular shape, larger than Saturn's <a href="mimas.html">Mimas</a>, which is round.
                         Naiad, Thalassa, Despina and Galatea are within the rings of Neptune.
