--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -108,8 +108,7 @@ link: saturn
                 <p class="paragraph">
                     There are 274 <a href="natural-satellite.html">moons</a> known to orbit Saturn. 
                     24 are regular satellites that have a relatively stable, circular orbit close to the planet. 
-                    They were named after Titans and Giants from Greek mythology. 
-                    Subsequent moons were named after other Greek mythological figures, Celtic and Inuit gods and Norse ice giants.
+                    They were named after Titans, Giants, and other characters from Greek mythology. 
                     The biggest moon is <a href="titan.html">Titan</a>, a satellite bigger than the planet <a href="mercury.html">Mercury</a>. 
                     Other round moons are <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                 </p>
@@ -117,6 +116,7 @@ link: saturn
                     Out of the irregularly-shaped satellite, <a href="hyperion.html">Hyperion</a> is the largest. 
                     There are satellites like Pan and Daphnis that are refered to as shepherd moons.
                     They have distinct equatorial ridges formed from clearing Saturn's rings.
+                    The 250 known irregular moons receie names of Celtic and Inuit gods, and Norse ice giants (with the exception of Phoebe.)
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right">
@@ -262,7 +262,7 @@ link: saturn
                 <p class="paragraph">
                     ESA joined NASA to launch the Cassini-Huygens spacecraft.
                     Cassini completed two flybys around Titan before releasing the Huygens lander.
-                    Discoveries during the mission were evidences of liquid water beneath the Enceladus surface and geysers, hydrocarbon lakes on Titan and new satellites of Saturn.
+                    Discoveries during the mission were evidences of liquid water beneath the Enceladus surface and geysers, hydrocarbon lakes on Titan, and new satellites of Saturn.
                 </p>
                 <p class="paragraph">
                     Proposed missions include a Saturn entry probe, Dragonfly, which is a probe that will explore Titan, and a few candidates for a mission to search life on Enceladus.
