--- a/pages/triton.html
+++ b/pages/triton.html
@@ -30,7 +30,7 @@ link: triton
                 <p class="paragraph">
                     Triton is named after the Greek sea god Triton, son of Poseidon, who is the Greek equivalent of the Roman Neptune.
                     The name was first proposed by Camille Flammarion in his 1880 book Astronomie Populaire, but was officially adopted many decades later.
-                    For a time, it was just refered to as "the <a href="satellites-of-neptune.html">satellite of Neptune</a>", as it was the only known until the discovery of Naiad in 1949.
+                    For a time, it was just refered to as "the <a href="satellites-of-neptune.html">satellite of Neptune</a>", as it was the only known until the discovery of Nereid in 1949.
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
