--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -57,8 +57,8 @@ link: uranus
                     <p class="paragraph">
                         It takes Uranus 17 days to complete a rotation around it's axis.
                         Some features move faster and complete a rotation for even less.
-                        The planet has an extreme axial tilt of 82.23° and rotates retrograde, similarly to <a href="venus.html">Venus</a>.
-                        The reason is unknown, but it is suggested that a protoplanet collided with Uranus, causing it's almost parallel to the ecliptic.
+                        The planet has an extreme axial tilt of -82.23° and rotates retrograde, similarly to <a href="venus.html">Venus</a>.
+                        The reason is unknown, but it is suggested that a protoplanet collided with Uranus, causing its almost parallel to the ecliptic.
                     </p>
                     <p class="paragraph">
                         Uranus is 20 AU away from the <a href="sun.html">Sun</a> on average, with a perihelion of 18.3 AU and an aphelion of 20.1 AU from the Sun.
@@ -118,17 +118,17 @@ link: uranus
                     </div>
                     <p class="paragraph">
                         There are 29 <a href="natural-satellite.html">moons</a> known to orbit Uranus, five of which are round.
-                        All of the moons are named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        All but the two most recently discovered of the moons are named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
                         The biggest one is <a href="titania.html">Titania</a>, followed by <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and the smallest - <a href="miranda.html">Miranda</a>.
                         All of the moons are relatively dark, with Umbriel being the darkest.
                         They are made of rock and ice and feature craters, canyons and scarps.
-                        Miranda is unique, as it features extremely large scarps on it's surface like the 20km high Verona Rupes.
+                        Miranda is unique, as it features extremely large scarps on it's surface like the 20km deep Verona Rupes.
                     </p>
                     <p class="paragraph">
                         The other 24 moons are divided into inner and irregular.
                         The inner moons orbit within Miranda's orbit, the closest to Uranus of the five round moons.
                         The biggest of them is Puck.
-                        All of the  irregular moons orbit outside Oberon's orbit, the farthest round moon from Uranus.
+                        All of the irregular moons orbit outside Oberon's orbit, the farthest round moon from Uranus.
                         They orbit in retrograde, with the exception of Margaret.
                         Sycorax is the largest moon of this group.
                     </p>
