--- a/index.html
+++ b/index.html
@@ -11,3 +11,38 @@ link: index
                 <h2 class="paragraphheader" id="WhatDoesGabrovaMean">What does Gabrova mean?</h2>
                 <p class="paragraph">2206 Gabrova is an asteroid located in the Asteroid Belt, discovered on April 1, 1976 by Russian astronomer Nikolai Chernykh at the Crimean Astrophysical Observatory.</p>
                 <p class="paragraph">Since it was discovered on April Fool's Day, the asteroid is named after the Bulgarian city of Gabrovo, known for its jokes and as the capital of humor and satire.</p>
+                <h2 class="paragraphheader" id="FeaturesArticles">Featured articles</h2>
+                <h3 class="paragraphheader" id="Planets">Planets</h3>
+                <div class="imgwrapper">
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/mercury.jpg" alt="Mercury">
+                        <p class="featuredbutton"><a class="navlink" href="pages/mercury.html">Mercury</a></p>
+                    </div>
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/venus.jpg" alt="venus">
+                        <p class="featuredbutton"><a class="navlink" href="pages/venus.html">Venus</a></p>
+                    </div>
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/earth.jpg" alt="Earth">
+                        <p class="featuredbutton"><a class="navlink" href="pages/earth.html">Earth</a></p>
+                    </div>
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/mars.jpg" alt="Mars">
+                        <p class="featuredbutton"><a class="navlink" href="pages/mars.html">Mars</a></p>
+                    </div>
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/jupiter.jpg" alt="Jupiter">
+                        <p class="featuredbutton"><a class="navlink" href="pages/jupiter.html">Jupiter</a></p>
+                    </div>
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/saturn.jpg" alt="Saturn">
+                        <p class="featuredbutton"><a class="navlink" href="pages/saturn.html">Saturn</a></p>
+                    </div>
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/uranus.jpg" alt="Uranus">
+                        <p class="featuredbutton"><a class="navlink" href="pages/uranus.html">Uranus</a></p>
+                    </div>
+                    <div class="captionbox center">
+                        <img class="articleimage clip" src="../assets/images/planets/neptune.jpg" alt="Neptune">
+                        <p class="featuredbutton"><a class="navlink" href="pages/neptune.html">Neptune</a></p>
+                    </div>
